# python-3d-programming-book

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_ABOUT_CONFIG.md  LICENSE  MISSING_CONTENT_ANALYSIS.md  PROJECT_STATUS.md  PUBLICATION_GUIDE.md  README.md  STRUCTURE.md  TABLE_OF_CONTENTS.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
appendices/: appendix_a_environment_setup.md  appendix_b_math_reference.md  appendix_c_troubleshooting_guide.md
part1_python_fundamentals/ch01_introduction/: 3d_object_placement.py  README.md  data_processing_example.py  hello_world.py  interactive_3d_demo.py
part1_python_fundamentals/ch02_variables/: 3d_coordinates.py  README.md  basic_variables.py  mathematical_operations.py  object_properties.py  type_conversion.py
part1_python_fundamentals/ch02_variables_data_types_operators/: type_conversion.py
part1_python_fundamentals/ch03_control_flow/: basic_conditionals.py  chapter_overview.md  complex_conditions.py  for_loops.py  game_logic_example.py  nested_control.py  while_loops.py
part1_python_fundamentals/ch04_functions/: 3d_math_functions.py  basic_functions.py  chapter_overview.md  decorators.py  lambda_functions.py  parameters_return.py  recursion.py  scope_variables.py
part1_python_fundamentals/ch05_data_structures/: chapter_overview.md  dictionaries_scene_data.py  lists_3d_objects.py  nested_structures.py  performance_comparison.py  sets_unique_elements.py  tuples_coordinates.py
part1_python_fundamentals/ch06_object_oriented_programming/: attributes_methods.py  basic_classes.py  chapter_overview.md  design_patterns.py  encapsulation.py  exception_handling.py  inheritance.py  polymorphism.py  special_methods.py
part1_python_fundamentals/ch07_modules_packages/: 3d_math_library.py  basic_modules.py  chapter_overview.md  graphics_pipeline.py  import_methods.py  module_attributes.py  namespace_management.py  package_distribution.py  package_structure.py
part1_python_fundamentals/ch08_file_io_data_processing/: basic_file_operations.py  binary_file_operations.py  chapter_overview.md  csv_data_processing.py  data_validation_error_handling.py  file_system_operations.py  json_data_handling.py
part1_python_fundamentals/ch09_advanced_python_concepts/: chapter_overview.md  concurrency.py  context_managers.py  debugging.py  decorators.py  external_libraries.py  functional_programming.py  iterators_generators.py  testing.py
part2_3d_graphics_foundations/ch10_introduction_to_3d_in_python/: 3d_graphics_libraries_overview.py  3d_transformations.py  basic_3d_objects.py  chapter_overview.md  coordinate_systems.py  rendering_basics.py
part2_3d_graphics_foundations/ch11_3d_math_and_physics/: advanced_vector_mathematics.py  chapter_overview.md  collision_detection_system.py  mathematical_optimization_and_performance.py  physics_engine_foundation.py  quaternion_rotation_system.py
part2_3d_graphics_foundations/ch12_advanced_rendering_techniques/: advanced_graphics_effects.py  advanced_lighting_engine.py  chapter_overview.md  modern_rendering_pipeline.py  real_time_rendering_engine.py  shader_based_rendering_system.py
part2_advanced_python_concepts/ch09_functional_programming/: 3d_transformations.py  chapter_overview.md  functional_basics.py  higher_order_functions.py  pure_functions.py
part2_advanced_python_concepts/ch10_iterators_and_generators/: 3d_data_streaming.py  chapter_overview.md  generators.py  iterators.py
part2_advanced_python_concepts/ch11_decorators_and_context_managers/: advanced_patterns.py  chapter_overview.md  context_managers.py  decorators.py
part2_advanced_python_concepts/ch12_working_with_external_libraries/: chapter_overview.md  library_management.py  numpy_integration.py  opengl_integration.py
part2_advanced_python_concepts/ch13_concurrency_and_parallelism/: async_programming.py  chapter_overview.md  multiprocessing_advanced.py  threading_basics.py
part2_advanced_python_concepts/ch14_testing_and_debugging/: chapter_overview.md  debugging_tools.py  test_coverage_and_quality.py  unit_testing_framework.py
part3_advanced_3d_graphics_applications/ch13_game_development_and_interactive_applications/: 3d_platformer_game.py  chapter_overview.md  interactive_3d_modeling_tool.py  (+3 more)
(+72 files in other folders)
